updates for new batch

--- a/3. Data Cleaning & Manipulation.ipynb
+++ b/3. Data Cleaning & Manipulation.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -63,21 +63,20 @@
      "output_type": "stream",
      "text": [
       "Does the wine df conatin nulls?: True\n",
-      "Does the energy df contain nulls?: PJM_Load_MW    False\n",
-      "dtype: bool\n"
+      "Does the energy df contain nulls?: False\n"
      ]
     }
    ],
    "source": [
     "print('Does the wine df conatin nulls?:', wine.isnull().any().any())\n",
-    "print('Does the energy df contain nulls?:', energy.isnull().any())"
+    "print('Does the energy df contain nulls?:', energy.isnull().any().any())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question:** why did we use \".any()\" twice when asking this question for the wine analysis?"
+    "**Question:** why did we use \".any()\" twice when asking this question?"
    ]
   },
   {
@@ -94,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +112,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +252,9 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "wine.fillna('unknown', inplace=True)"
@@ -1493,7 +1494,9 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def helper(row):\n",
@@ -1507,7 +1510,9 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "wine['great and cheap'] = wine.apply(helper, axis=1)"
