--- a/3. Data Cleaning & Manipulation.ipynb
+++ b/3. Data Cleaning & Manipulation.ipynb
@@ -2,25 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Answer to exercises from notebook 2:\n",
-    "\n",
-    "\n",
-    "\n",
-    "`wine.groupby('country')['description'].count().sort_values(ascending=False).plot(kind='bar', figsize=(10,7))\n",
-    "plt.show()`"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -1648,7 +1637,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "wine.price = wine.price.astype('int')"
@@ -1657,7 +1648,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "wine['great and cheap'] = wine.apply(helper, axis=1)"
@@ -4367,7 +4360,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "energy['T-1'] = energy[energy.columns[0]].shift(1)"
@@ -4987,7 +4982,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
