added notebook title to notebook 4 - no changes to nb 3

--- a/4. Real-World Data Example.ipynb
+++ b/4. Real-World Data Example.ipynb
@@ -1,15 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here, we look at a new dataset and try to answer some questions about it."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -19,8 +12,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Real-World Data Example\n",
+    "\n",
+    "Here, we look at a new dataset and try to answer some questions about it."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -42,26 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Invoice/Item Number', 'Date', 'Store Number', 'Store Name', 'Address',\n",
-       "       'City', 'Zip Code', 'Store Location', 'County Number', 'County',\n",
-       "       'Category', 'Category Name', 'Vendor Number', 'Vendor Name',\n",
-       "       'Item Number', 'Item Description', 'Pack', 'Bottle Volume (ml)',\n",
-       "       'State Bottle Cost', 'State Bottle Retail', 'Bottles Sold',\n",
-       "       'Sale (Dollars)', 'Volume Sold (Liters)', 'Volume Sold (Gallons)'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.columns"
    ]
@@ -343,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
