added python dtypes & mpl to notebook 1, gitignore & req.txt

--- a/1. Intro to Pandas.ipynb
+++ b/1. Intro to Pandas.ipynb
@@ -79,9 +79,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Python data types\n",
+    "\n",
+    "A quick review of the basic data structures in Python:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "float(16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int(16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str(16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bool(16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bool(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bool(None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Pandas Data Types\n",
     "\n",
-    "Pandas has 2 main data structures: \n",
+    "Pandas has 2 main data structures:\n",
+    "\n",
     "- pd.Series:\n",
     "    - 1-D data structure. Different from a numpy array in that each value has a unique ID.\n",
     "    \n",
@@ -207,7 +271,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also quickly look at the data types of each of our columns."
+    "We can also quickly look at the data types of each of our columns:\n",
+    "- each column has a single data type (due to the data being represented as numpy arrays\n",
+    "- pandas has figured out some of our columns dtypes for us"
    ]
   },
   {
@@ -223,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Also useful is df.describe() - a method which generates summary statistics of the columns"
+    "Also useful is df.describe() - a method which generates summary statistics of the columns:"
    ]
   },
   {
@@ -486,6 +552,41 @@
     "## Exercise:\n",
     "Select the first 5 rows and columns \"points\" and \"region_1\" of the *scrambled_wine* table.\n",
     "Hint: you'll need to string together 2 different types of selectors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pandas + Matplotlib\n",
+    "\n",
+    "Matplotlib is a library famous for having multiple ways to do one thing - partly due to its heritage that goes back to MATLAB.\n",
+    "\n",
+    "Below is one way to use matplotlib with pandas, that allows you to plot multiple axes on a single figure.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "%matplotlib inline\n",
+    "\n",
+    "fig, axes = plt.subplots(2)\n",
+    "\n",
+    "wine.iloc[:1000, :].loc[:, 'price'].plot(ax=axes[0])\n",
+    "\n",
+    "wine.iloc[:1000, :].loc[:, 'points'].plot(ax=axes[1], kind='hist')"
    ]
   },
   {
