update to Intro Notebook

--- a/0. Introduction.ipynb
+++ b/0. Introduction.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "# About Me:\n",
-    "## DSR Alum (Batch 12), Manager, Analytics & Customer Performance: [Tempus Energy]( https://www.tempusenergy.com) \n",
-    "### Previously: Data Scientist at Tempus Energy\n",
+    "## DSR Alum (Batch 12), Data Science Consultant: [pmOne](https://www.pmone.com) \n",
+    "### Previously: Manager - Analytics & Customer Performance & Data Scientist at Tempus Energy\n",
     "Time series problems (price prediction for energy), analysis, visualizations & reporting.\n",
     "\n",
     "### MSc Sustainable Development, BA Economics\n",
@@ -43,7 +43,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
