updates for teaching Paul Mora

--- a/0. Introduction.ipynb
+++ b/0. Introduction.ipynb
@@ -5,14 +5,11 @@
    "metadata": {},
    "source": [
     "# About Me:\n",
-    "## DSR Alum (Batch 12), Data Science Consultant: [pmOne](https://www.pmone.com) \n",
-    "### Previously: Manager - Analytics & Customer Performance & Data Scientist at Tempus Energy\n",
-    "Time series problems (price prediction for energy), analysis, visualizations & reporting.\n",
+    "## DSR Alum (Batch 20), Data Science Consultant: [Oxera](https://www.oxera.com) \n",
     "\n",
-    "### MSc Sustainable Development, BA Economics\n",
-    "Previously: Senior Energy Analyst, Veolia North America.\n",
+    "### MSc Financial Economics, BA Economics\n",
     "#### Contact: \n",
-    "rachelkberryman@gmail.com. [LinkedIn](https://www.linkedin.com/in/rachelberryman/)"
+    "paul.michael.mora.sancho@gmail.com. [LinkedIn](https://www.linkedin.com/in/paul-mora-53a727168/)"
    ]
   },
   {
