--- a/1. Intro to Pandas.ipynb
+++ b/1. Intro to Pandas.ipynb
@@ -58,22 +58,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pd.__version__"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -89,54 +83,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "float(16)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "int(16)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "str(16)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "bool(16)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "bool(0)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "bool(None)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -172,13 +154,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "wine = pd.read_csv('data/wine_reviews/winemag-data_first150k.csv', index_col=0)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -188,7 +166,7 @@
     "\n",
     "The DataFrame is a Python object, with useful methods (i.e. functions) and attributes (often referring to simpler Python data types like floats or tuples).  \n",
     "\n",
-    "You can tell if it is a method by `()` at the end.  A method will run code - an attribute will refer to data that already exists (most of the time - see the `@property` decorator for more).\n",
+    "You can tell if it is a method by `()` at the end.  A method will run code - an attribute will refer to data that already exists.\n",
     "\n",
     "df - calling the DataFrame without any method or attribute reference will print the `__repr__` method of the class.  For a DataFrame, the Pandas developers chose to print the entire DataFrame (or, up to a set number of row - you can configure this number in the notebook settings.)"
    ]
@@ -198,9 +176,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -214,9 +190,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -230,9 +204,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.tail(3)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -246,9 +218,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.shape"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -263,9 +233,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.shape[0]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -281,9 +249,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.dtypes"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -297,9 +263,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.describe()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -320,9 +284,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.columns"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -336,9 +298,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.index"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -352,18 +312,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "type(wine.values)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.values[0]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -385,10 +341,7 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "# 1. With quotes\n",
-    "wine['price']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -397,10 +350,7 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "# 2. With period (NOTE - ONLY works when column names have no spaces!)\n",
-    "wine.price"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -414,9 +364,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.price.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -439,18 +387,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.iloc[:5]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.loc[:5]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -462,46 +406,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "import random"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "random_index = random.sample(list(wine.index), k=len(list(wine.index)))\n",
-    "wine['scrambled_index'] = random_index\n",
-    "scrambled_wine = wine.set_index('scrambled_index')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# returns all rows up to the 5th position.\n",
-    "scrambled_wine.iloc[:5]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# returns all rows up to where #5 is in the index. Since we scrambled it, this is no longer in the 5th position.\n",
-    "scrambled_wine.loc[:5]"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -515,9 +443,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "scrambled_wine.iloc[:5, :5]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -530,9 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -577,17 +501,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "%matplotlib inline\n",
-    "\n",
-    "fig, axes = plt.subplots(2)\n",
-    "\n",
-    "wine.iloc[:1000, :].loc[:, 'price'].plot(ax=axes[0])\n",
-    "\n",
-    "wine.iloc[:1000, :].loc[:, 'points'].plot(ax=axes[1], kind='hist')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
