--- a/4. Real-World Data Example.ipynb
+++ b/4. Real-World Data Example.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -22,10 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('data/iowa_liquor/Iowa_Liquor_Sales.csv', index_col=0)"
@@ -33,11 +29,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Invoice/Item Number</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Store Number</th>\n",
+       "      <th>Store Name</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Zip Code</th>\n",
+       "      <th>Store Location</th>\n",
+       "      <th>County Number</th>\n",
+       "      <th>County</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Item Number</th>\n",
+       "      <th>Item Description</th>\n",
+       "      <th>Pack</th>\n",
+       "      <th>Bottle Volume (ml)</th>\n",
+       "      <th>State Bottle Cost</th>\n",
+       "      <th>State Bottle Retail</th>\n",
+       "      <th>Bottles Sold</th>\n",
+       "      <th>Sale (Dollars)</th>\n",
+       "      <th>Volume Sold (Liters)</th>\n",
+       "      <th>Volume Sold (Gallons)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>S29198800001</td>\n",
+       "      <td>11/20/2015</td>\n",
+       "      <td>2191</td>\n",
+       "      <td>Keokuk Spirits</td>\n",
+       "      <td>1013 MAIN</td>\n",
+       "      <td>KEOKUK</td>\n",
+       "      <td>52632</td>\n",
+       "      <td>1013 MAIN\\nKEOKUK 52632\\n(40.39978, -91.387531)</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>Lee</td>\n",
+       "      <td>...</td>\n",
+       "      <td>297</td>\n",
+       "      <td>Templeton Rye w/Flask</td>\n",
+       "      <td>6</td>\n",
+       "      <td>750</td>\n",
+       "      <td>$18.09</td>\n",
+       "      <td>$27.14</td>\n",
+       "      <td>6</td>\n",
+       "      <td>$162.84</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>1.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>S29195400002</td>\n",
+       "      <td>11/21/2015</td>\n",
+       "      <td>2205</td>\n",
+       "      <td>Ding's Honk And Holler</td>\n",
+       "      <td>900 E WASHINGTON</td>\n",
+       "      <td>CLARINDA</td>\n",
+       "      <td>51632</td>\n",
+       "      <td>900 E WASHINGTON\\nCLARINDA 51632\\n(40.739238, ...</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>Page</td>\n",
+       "      <td>...</td>\n",
+       "      <td>297</td>\n",
+       "      <td>Templeton Rye w/Flask</td>\n",
+       "      <td>6</td>\n",
+       "      <td>750</td>\n",
+       "      <td>$18.09</td>\n",
+       "      <td>$27.14</td>\n",
+       "      <td>12</td>\n",
+       "      <td>$325.68</td>\n",
+       "      <td>9.00</td>\n",
+       "      <td>2.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>S29050300001</td>\n",
+       "      <td>11/16/2015</td>\n",
+       "      <td>3549</td>\n",
+       "      <td>Quicker Liquor Store</td>\n",
+       "      <td>1414 48TH ST</td>\n",
+       "      <td>FORT MADISON</td>\n",
+       "      <td>52627</td>\n",
+       "      <td>1414 48TH ST\\nFORT MADISON 52627\\n(40.624226, ...</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>Lee</td>\n",
+       "      <td>...</td>\n",
+       "      <td>249</td>\n",
+       "      <td>Disaronno Amaretto Cavalli Mignon 3-50ml Pack</td>\n",
+       "      <td>20</td>\n",
+       "      <td>150</td>\n",
+       "      <td>$6.40</td>\n",
+       "      <td>$9.60</td>\n",
+       "      <td>2</td>\n",
+       "      <td>$19.20</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>S28867700001</td>\n",
+       "      <td>11/04/2015</td>\n",
+       "      <td>2513</td>\n",
+       "      <td>Hy-Vee Food Store #2 / Iowa City</td>\n",
+       "      <td>812  S 1ST AVE</td>\n",
+       "      <td>IOWA CITY</td>\n",
+       "      <td>52240</td>\n",
+       "      <td>812 S 1ST AVE\\nIOWA CITY 52240\\n</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>Johnson</td>\n",
+       "      <td>...</td>\n",
+       "      <td>237</td>\n",
+       "      <td>Knob Creek w/ Crystal Decanter</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1750</td>\n",
+       "      <td>$35.55</td>\n",
+       "      <td>$53.34</td>\n",
+       "      <td>3</td>\n",
+       "      <td>$160.02</td>\n",
+       "      <td>5.25</td>\n",
+       "      <td>1.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>S29050800001</td>\n",
+       "      <td>11/17/2015</td>\n",
+       "      <td>3942</td>\n",
+       "      <td>Twin Town Liquor</td>\n",
+       "      <td>104 HIGHWAY 30 WEST</td>\n",
+       "      <td>TOLEDO</td>\n",
+       "      <td>52342</td>\n",
+       "      <td>104 HIGHWAY 30 WEST\\nTOLEDO 52342\\n(41.985887,...</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>Tama</td>\n",
+       "      <td>...</td>\n",
+       "      <td>249</td>\n",
+       "      <td>Disaronno Amaretto Cavalli Mignon 3-50ml Pack</td>\n",
+       "      <td>20</td>\n",
+       "      <td>150</td>\n",
+       "      <td>$6.40</td>\n",
+       "      <td>$9.60</td>\n",
+       "      <td>2</td>\n",
+       "      <td>$19.20</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Invoice/Item Number        Date  Store Number  \\\n",
+       "0        S29198800001  11/20/2015          2191   \n",
+       "1        S29195400002  11/21/2015          2205   \n",
+       "2        S29050300001  11/16/2015          3549   \n",
+       "3        S28867700001  11/04/2015          2513   \n",
+       "4        S29050800001  11/17/2015          3942   \n",
+       "\n",
+       "                         Store Name              Address          City  \\\n",
+       "0                    Keokuk Spirits            1013 MAIN        KEOKUK   \n",
+       "1            Ding's Honk And Holler     900 E WASHINGTON      CLARINDA   \n",
+       "2              Quicker Liquor Store         1414 48TH ST  FORT MADISON   \n",
+       "3  Hy-Vee Food Store #2 / Iowa City       812  S 1ST AVE     IOWA CITY   \n",
+       "4                  Twin Town Liquor  104 HIGHWAY 30 WEST        TOLEDO   \n",
+       "\n",
+       "  Zip Code                                     Store Location  County Number  \\\n",
+       "0    52632    1013 MAIN\\nKEOKUK 52632\\n(40.39978, -91.387531)           56.0   \n",
+       "1    51632  900 E WASHINGTON\\nCLARINDA 51632\\n(40.739238, ...           73.0   \n",
+       "2    52627  1414 48TH ST\\nFORT MADISON 52627\\n(40.624226, ...           56.0   \n",
+       "3    52240                   812 S 1ST AVE\\nIOWA CITY 52240\\n           52.0   \n",
+       "4    52342  104 HIGHWAY 30 WEST\\nTOLEDO 52342\\n(41.985887,...           86.0   \n",
+       "\n",
+       "    County  ...  Item Number                               Item Description  \\\n",
+       "0      Lee  ...          297                          Templeton Rye w/Flask   \n",
+       "1     Page  ...          297                          Templeton Rye w/Flask   \n",
+       "2      Lee  ...          249  Disaronno Amaretto Cavalli Mignon 3-50ml Pack   \n",
+       "3  Johnson  ...          237                 Knob Creek w/ Crystal Decanter   \n",
+       "4     Tama  ...          249  Disaronno Amaretto Cavalli Mignon 3-50ml Pack   \n",
+       "\n",
+       "   Pack Bottle Volume (ml)  State Bottle Cost State Bottle Retail  \\\n",
+       "0     6                750             $18.09              $27.14   \n",
+       "1     6                750             $18.09              $27.14   \n",
+       "2    20                150              $6.40               $9.60   \n",
+       "3     3               1750             $35.55              $53.34   \n",
+       "4    20                150              $6.40               $9.60   \n",
+       "\n",
+       "   Bottles Sold  Sale (Dollars) Volume Sold (Liters) Volume Sold (Gallons)  \n",
+       "0             6         $162.84                 4.50                  1.19  \n",
+       "1            12         $325.68                 9.00                  2.38  \n",
+       "2             2          $19.20                 0.30                  0.08  \n",
+       "3             3         $160.02                 5.25                  1.39  \n",
+       "4             2          $19.20                 0.30                  0.08  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
@@ -328,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
