adding info on finding max index

--- a/2. Summarizing, Aggregating and Grouping.ipynb
+++ b/2. Summarizing, Aggregating and Grouping.ipynb
@@ -77,9 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "wine['price'].tail()"
@@ -553,6 +551,32 @@
    "metadata": {},
    "source": [
     "**Question**: Create a quick plot of the number of wines made in each country, from highest to lowest."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Selecting the max and min values with Index Max and Min\n",
+    "In addition to `.max()` and `.min()`, which returns the maximum or minimum values, we can use `.idxmax()` and `.idxmin()` to return the *index* pertaining to the maximum and minimum values. \n",
+    "\n",
+    "For example, let's use `.idxmax()` to find the country with the highest standard deviation in its prices."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "price_table.loc[:, 'price_std'].idxmax()"
    ]
   },
   {
@@ -1107,9 +1131,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
